backend/customers-service/customer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer-container
        image: imadoualid/customer:1
        imagePullPolicy: Always
