backend/customers-service/customer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  ports:
  - name: http
    targetPort: 8082
    port: 80
  selector:
    app: customer
