backend/customers-service/customer-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: customer-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: customer.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: customer-service
          servicePort: http
